Fixed a bug with overflow in IE on the adminmap and reduced the size of the KML layers UL on the front end.

--- a/css/adminmap.css
+++ b/css/adminmap.css
@@ -233,6 +233,7 @@ ul.category-filters{
 	margin-left:0px;
 	overflow:auto;
 	height: 250px;
+	position:relative;
 }
 
 ul.category-filters li{
